--- a/1694119HermanVillamarin/index.html
+++ b/1694119HermanVillamarin/index.html
@@ -28,13 +28,30 @@
 </head>
 <body>
 	<header>
-		<div class="container-fluid">
+<div class="container-fluid">
 		<div class="row text-justify img-responsive">
 			<div class="col sx 6 col-sm-6 col-md-3">
 				<img src="img/deportivoazul.jpg" class="img-responsive col glyphicon-align-justify p-2"alt="">
 			</div>
-			<div class="col sx 6 col-sm-6 col-md-9 p-4">
+			<div class="col sx 6 col-sm-6 col-md-7 p-4 text-center">
 				<h1>SITIO HERMAN VILLAMARIN</h1>
+			</div>
+			<div class="col sx 6 col-sm-6 col-md-2">
+				<nav class="navbar navbar-default" role="navigation">
+    			<div class="navbar-header">
+       			<button type="button" class="navbar-toggle color2" data-toggle="collapse" data-target=".navbar-collapse">
+            	<span class="">MENU</span>
+            	</button>
+    			</div>
+    			<div class="navbar-collapse collapse">
+        		<ul class="nav navbar-nav navbar-left">
+           		 <li><a href="#">INICIO</a></li>
+       			</ul>
+        		<ul class="nav navbar-nav navbar-left">
+           		 <li><a href="#">GALERIA</a></li>
+       			</ul>
+        		</div>
+				</nav>
 			</div>
 		</div>
 	</div>
