--- a/1694119HermanVillamarin/index.html
+++ b/1694119HermanVillamarin/index.html
@@ -38,8 +38,8 @@
 			</div>
 			<div class="col sx 6 col-sm-6 col-md-2">
 				<button class="m-4 p-2 color2">INICIO</button>
-				<button class="m-4 p-2 color2">GALERIA</button>
-				<button class="m-4 p-2 color2">CONTACTENOS</button>
+				<button class="m-4 p-2 color2"><a href="#galeria">GALERIA</a></button>
+				<button class="m-4 p-2 color2"><a href="#contacto">CONTACTENOS</a></button></button>
 			</div>
 		</div>
 	</div>
@@ -72,7 +72,8 @@
 			</div>
 		</div>
 		
-		<!--Galeria-->	
+		<!--Galeria-->
+	<A name="galeria"></a>		
 	<div class="container-fluid color4">
 		<h1 class="col-md-12 text-center">GALERIA</h1>
 		<div class="row">
@@ -120,6 +121,7 @@
 	</div>
 	
 	<footer>
+		<A name="contacto"></a>
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xs 12 col-sm 6 col-md-3">
