--- a/1694119HermanVillamarin/index.html
+++ b/1694119HermanVillamarin/index.html
@@ -30,16 +30,17 @@
 	<header>
 	<div class="container-fluid">
 		<div class="row text-justify img-responsive">
-			<div class="col sx 6 col-sm-6 col-md-3">
+			<div class="col sx 12 col-sm-3 col-md-3">
 				<img src="img/deportivoazul.jpg" class="img-responsive col glyphicon-align-justify p-2"alt="">
 			</div>
-			<div class="col sx 6 col-sm-6 col-md-7 p-4 text-center">
+			<div class="col sx 12 col-sm-5 col-md-5 text-center">
 				<h1>SITIO HERMAN VILLAMARIN</h1>
 			</div>
-			<div class="col sx 6 col-sm-6 col-md-2">
-				<button class="m-4 p-2 color2">INICIO</button>
-				<button class="m-4 p-2 color2"><a href="#galeria">GALERIA</a></button>
-				<button class="m-4 p-2 color2"><a href="#contacto">CONTACTENOS</a></button></button>
+			<div class="col sx-12 col-sm-4 col-md-4 center-block">
+				<button class="color2">INICIO</button>
+				<button class="color2"><a href="#galeria">GALERIA</a></button>
+				<button class="color2"><a href="#contacto">CONTACTENOS</a></button></button>
+				<button class="color2"><a href="tablas.html">TABLA</a></button></button
 			</div>
 		</div>
 	</div>
