--- a/1694119HermanVillamarin/tablas.html
+++ b/1694119HermanVillamarin/tablas.html
@@ -25,6 +25,38 @@
                  to{height: 0;}
             }
         </style>
+
+     <script src="jquery-1.3.2.min.js" type="text/javascript"></script>   
+      <script>
+function myCreateFunction() {
+            var table = document.getElementById("myTable"); {
+                var row = table.insertRow(0);
+                var cell1 = row.insertCell(0);
+                var cell2 = row.insertCell(1);
+                var cell3 = row.insertCell(1);
+                var cell4 = row.insertCell(1);
+                cell1.innerHTML = '<input type="text">';
+                cell2.innerHTML = '<input type="text">';
+                cell3.innerHTML = '<input type="text">';
+                cell4.innerHTML = '<input >'
+                cell1.style.height = "20px";
+                cell1.style.width = "200px";
+                cell2.style.height = "20px";
+                cell2.style.width = "200px";
+                cell3.style.height = "20px";
+                cell3.style.width = "200px";
+                cell4.style.height = "20px";
+                cell4.style.width = "200px";
+                txt.style.width = "30px";
+            }
+        }
+
+        function myDeleteFunction() {
+            document.getElementById("myTable").deleteRow(0);
+        }
+
+      </script>
+      </script>    
 </head>
 <body>
 	<header>
@@ -42,36 +74,42 @@
 		</div>
 	</div>
 	</header>
-	<div class="container">
-		<table class="table table-striped">
-			<tr>
-				<th>id</th>
-				<th>Nombre</th>
-				<th>Apellido</th>
-				<th>Telefono</th>
-			</tr>
-			<tr>
-				<td>1</td>
-				<td>Herman</td>
-				<td>Villamarin</td>
-				<td>310318544</td>
-			</tr>
-			<tr>
-				<td>1</td>
-				<td>Monica</td>
-				<td>Villamarin</td>
-				<td>310318544</td>
-			</tr>
-			<tr>
-				<td>1</td>
-				<td>Alejandra</td>
-				<td>Villamarin</td>
-				<td>310318544</td>
-			</tr>
-		</table>
-	</div>
 	
+	<h2 class="text-center">POR FAVOR CLICK EN AÑADIR O ELIMINAR</h2>	
+	<form class="text-center">
+	<div class="container-fluid">
+		<div class="row">
+		<div class="col-md-9 color2">	
+    <table id="myTable">
+        <tr>
+        	<td style="height: 20px; width: 100px;">
+                <input name="urlresp" type="text" id="urlresp" onfocus="this.value=''" value="Ingrese Nombre">
+            </td>
+             <td style="height: 20px; width: 100px;">
+                <input name="urlresp" type="text" id="urlresp" onfocus="this.value=''" value="Ingrese Apellido">
+            </td>
+            <td style="height: 20px; width: 100px;">
+                <input name="urlresp" type="text" id="urlresp" onfocus="this.value=''" value="Ingrese Telefono">
+            </td>
+            <td style="height: 20px; width: 100px;">
+                <input name="urlresp" type="text" id="urlresp" onfocus="this.value=''" value="Ingrese Dirección">
+            </td>
+        </tr>
+    </table>
+    	</div>
+    	<div class="col-md-3 color1">
+    	<button onclick="myCreateFunction()" type="button" id="myTable">
+    	<img src="">Añadir</button>
+    	<button onclick="myDeleteFunction()" type="button">
+    	<img src="">Eliminar</button>
+    	<p>&nbsp;</p>
+  		</div>
+  		</div>
+  	</div>
+  	</form>
 	
+
+		
 	<footer>
 		<div class="container-fluid">
 			<div class="row">
